# Learning-SQP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/include/: common.hpp  integratior.hpp  problem.hpp  sqp.hpp  vehicle_model.hpp
core/src/: integratior.cpp  sqp.cpp
example/: simple_problem.hpp
test/: CMakeLists.txt
test/test_jacobian/: CMakeLists.txt  example_c.hpp  example_cpp.hpp  example_sym.hpp  main.cpp
